added itineraries ms